--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
-    "axios": "^1.3.4",
+    "axios": "^1.3.6",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +23,7 @@
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.5",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
